# rust-termination-calculator

./: Cargo.toml  README.md  test1.sh  test2.sh  test3.sh
src/: lib.rs  main.rs  types.rs
