[package]
name = "rust-termination-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
cid = { version = "0.11.0", features = ["serde-codec", "std"] }
clap = { version = "4.4.16", features = ["derive"] }
fil_actors_runtime = "9.0.1"
fvm_ipld_encoding = "0.4.0"
fvm_shared = "~4.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
serde = { version = "1.0.136", features = ["derive"] }
